Fix modal scrolling on iOS Safari

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 /****** GENERAL STYLES ******/
+html{ 
+    overflow: scroll; 
+    -webkit-overflow-scrolling: touch;
+}
+
 .text {
     font-family: 'Montserrat', sans-serif;
 }
